# neural-net-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
docs/: alternatives.md  app.js  index.html  learnings.md  styles.css
docs/wasm/: neural_net_wasm.d.ts  neural_net_wasm.js  neural_net_wasm_bg.wasm  neural_net_wasm_bg.wasm.d.ts
documentation/: PRD.md  alternatives.md  architecture.md  cli.md  learnings.md  plan.md  presentation-script.md  web-ui.md
matrix/src/: matrix.rs
matrix/tests/: markdown_tests.rs
neural-net-cli/: Cargo.toml
neural-net-cli/src/: main.rs
neural-net-cli/tests/: cli_tests.rs  resume_tests.rs  train_tests.rs
neural-net-server/: Cargo.toml
neural-net-server/src/: lib.rs  main.rs
neural-net-server/static/: app.js  index.html  styles.css
neural-net-server/static/wasm/: neural_net_wasm.js  neural_net_wasm_bg.wasm  neural_net_wasm_bg.wasm.d.ts
neural-net-server/tests/: api_tests.rs  server_tests.rs
neural-net-wasm/: Cargo.toml
neural-net-wasm/src/: lib.rs
neural-network/: Cargo.toml
neural-network/src/: checkpoint.rs  examples.rs  lib.rs  network.rs  training.rs
neural-network/tests/: checkpoint_tests.rs  examples_tests.rs  resume_training_tests.rs  serialization_tests.rs  training_controller_tests.rs
scripts/: batch-test.sh  run.sh  update-build-info.sh
